Updating the nav bar

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="#">Hosting</a></li>
-          <li class="nav__item"><a href="#">VPS</a></li>
-          <li class="nav__item"><a href="#">Domain</a></li>
+          <li class="nav__item"><a href="#">About</a></li>
+          <li class="nav__item"><a href="#">Areas</a></li>
+          <li class="nav__item"><a href="#">Staff</a></li>
           <li class="nav__item"><a href="#">Pricing</a></li>
         </ul>
       </nav>
@@ -390,11 +390,7 @@
         <div class="grid grid--1x2">
           <div class="callout__content">
             <h2 class="callout__heading">Ready to Get Started?</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-              voluptate tempora qui distinctio consequatur aliquid pariatur
-              cupiditate quas cum fugit.
-            </p>
+            <p>Join us to explore the path to achieving expertise</p>
           </div>
           <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
         </div>
