--- a/index.html
+++ b/index.html
@@ -65,11 +65,8 @@
     </section>
     <section data-aos="fade-up" class="block container block-domain">
       <header class="block__header">
-        <h2>Starting at $9 per month</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-          exercitationem?
-        </p>
+        <h2>Starting at $20 per month</h2>
+        <p>Choose the plan that best fits your goals</p>
       </header>
       <div class="input-group">
         <input
@@ -84,12 +81,11 @@
         </button>
       </div>
       <ul class="list block-domain__prices">
-        <li><span class="badge badge--secondary">.com $9</span></li>
-        <li>.sg $10</li>
-        <li>.space $11</li>
-        <li>.info $14</li>
-        <li>.net $10</li>
-        <li>.xyz $10</li>
+        <li><span class="badge badge--secondary">Gold $100</span></li>
+        <li>Basic $20</li>
+        <li>Mid $30</li>
+        <li>Advanced $50</li>
+        <li>Extra $15</li>
       </ul>
     </section>
     <section data-aos="fade-up" class="block container block-plans">
@@ -97,18 +93,20 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <h3 class="plan__name">Basic</h3>
+              <span class="plan__price">$20</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
+              <span class="plan__description"
+                >Let's guide you through expertise</span
+              >
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">Full resume review</li>
+                <li class="list__item">Tips on areas for improvement</li>
+                <li class="list__item">Tips on resume structure</li>
+                <li class="list__item">Tips on Career Counseling</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
             </div>
@@ -117,18 +115,20 @@
         <div class="plan plan--popular">
           <div class="card card--primary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <h3 class="plan__name">Gold</h3>
+              <span class="plan__price">$100</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--primary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
+              <span class="plan__description"
+                >Let's guide you through expertise</span
+              >
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">LinkedIn Optimization</li>
+                <li class="list__item">Career Planning</li>
+                <li class="list__item">Interview Preparation</li>
+                <li class="list__item">Job Search Strategies</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
             </div>
@@ -137,18 +137,20 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <h3 class="plan__name">Advanced</h3>
+              <span class="plan__price">$50</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description">Easy start on the cloud</span>
+              <span class="plan__description"
+                >Let's guide you through expertise</span
+              >
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">Unlimited Websites</li>
-                <li class="list__item">Unlimited Bandwidth</li>
-                <li class="list__item">100 GB SSD Sotrage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">Skill Development Plans</li>
+                <li class="list__item">Portfolio Development</li>
+                <li class="list__item">Networking Strategies</li>
+                <li class="list__item">Career Progression Planning</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
             </div>
