--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <input
           type="text"
           class="input"
-          placeholder="Enter domain name here..."
+          placeholder="Enter plan name here..."
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
