--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="https://hellemfied.netlify.app/" />
-    <title>Expertise - Achieve mastery in IT field.</title>
+    <title>Expertise - Achieve expertise in IT field.</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
@@ -84,7 +84,6 @@
         <li><span class="badge badge--secondary">Gold $100</span></li>
         <li>Basic $20</li>
         <li>Mid $30</li>
-        <li>Advanced $50</li>
         <li>Extra $15</li>
       </ul>
     </section>
@@ -137,8 +136,8 @@
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Advanced</h3>
-              <span class="plan__price">$50</span>
+              <h3 class="plan__name">Extra</h3>
+              <span class="plan__price">$15</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">10% OFF</span>
               <span class="plan__description"
@@ -160,7 +159,7 @@
     </section>
     <section class="block container">
       <header class="block__header">
-        <h2>Host on the Cloud to Keep Growing</h2>
+        <h2>Keep up to Keep Growing</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
           voluptatem.
@@ -173,7 +172,7 @@
               <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
+          <h3 class="feature__heading">Plans to fulfill your needs</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
             obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
