--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="#">About</a></li>
-          <li class="nav__item"><a href="#">Areas</a></li>
-          <li class="nav__item"><a href="#">Staff</a></li>
-          <li class="nav__item"><a href="#">Pricing</a></li>
+          <li class="nav__item"><a href="#">Geral</a></li>
+          <li class="nav__item"><a href="#">Entrevistas</a></li>
+          <li class="nav__item"><a href="#">Comunidades</a></li>
+          <li class="nav__item"><a href="#">Mais</a></li>
         </ul>
       </nav>
     </header>
@@ -87,71 +87,95 @@
         <li>Extra $15</li>
       </ul>
     </section>
+    <section data-aos="fade-up" class="block container">
+      <header class="block__header">
+        <h2>
+          Não sabe por onde começar na preparação para a entrevista? Nós temos
+          tudo o que você precisa.
+        </h2>
+        <p>
+          Este guia está estruturado em um estilo simples de seguir, passo a
+          passo, cobrindo todos os aspectos da sua preparação para entrevista de
+          engenharia de software - sem necessidade de experiência prévia em
+          entrevista.
+        </p>
+      </header>
+    </section>
     <section data-aos="fade-up" class="block container block-plans">
-      <div class="grid grid--1x3">
+      <div class="grid grid--1x4">
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Basic</h3>
-              <span class="plan__price">$20</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description"
-                >Let's guide you through expertise</span
-              >
+              <h3 class="plan__name">1º Passo</h3>
+              <span class="plan__description">Preparar o currículo</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">Full resume review</li>
-                <li class="list__item">Tips on areas for improvement</li>
-                <li class="list__item">Tips on resume structure</li>
-                <li class="list__item">Tips on Career Counseling</li>
+                <li class="list__item">
+                  Conteúdo de currículo específico de engenharia de software
+                </li>
+                <li class="list__item">Otimize e teste seu currículo</li>
               </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <button class="btn btn--outline btn--block">Ler Agora</button>
             </div>
           </div>
         </div>
         <div class="plan plan--popular">
           <div class="card card--primary">
             <header class="card__header">
-              <h3 class="plan__name">Gold</h3>
-              <span class="plan__price">$100</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--primary badge--small">10% OFF</span>
+              <h3 class="plan__name">2º Passo</h3>
               <span class="plan__description"
-                >Let's guide you through expertise</span
+                >Prepare-se para as entrevistas</span
               >
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">LinkedIn Optimization</li>
-                <li class="list__item">Career Planning</li>
-                <li class="list__item">Interview Preparation</li>
-                <li class="list__item">Job Search Strategies</li>
+                <li class="list__item">
+                  Preparação passo a passo para a entrevista de codificação
+                </li>
+                <li class="list__item">
+                  Preparação para entrevistas de Gestão de projetos
+                </li>
+                <li class="list__item">
+                  Preparação para entrevista comportamental
+                </li>
               </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <button class="btn btn--outline btn--block">Ler Agora</button>
             </div>
           </div>
         </div>
         <div class="plan">
           <div class="card card--secondary">
             <header class="card__header">
-              <h3 class="plan__name">Extra</h3>
-              <span class="plan__price">$15</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% OFF</span>
-              <span class="plan__description"
-                >Let's guide you through expertise</span
-              >
+              <h3 class="plan__name">3º Passo</h3>
+              <span class="plan__description">Negocie a melhor oferta</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
-                <li class="list__item">Skill Development Plans</li>
-                <li class="list__item">Portfolio Development</li>
-                <li class="list__item">Networking Strategies</li>
-                <li class="list__item">Career Progression Planning</li>
+                <li class="list__item">
+                  Estratégias de negociação para engenheiros de software
+                </li>
+                <li class="list__item">
+                  Guia sobre como funciona a remuneração para engenheiros de
+                  software
+                </li>
               </ul>
-              <button class="btn btn--outline btn--block">Buy Now</button>
+              <button class="btn btn--outline btn--block">Ler Agora</button>
+            </div>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">4º Passo</h3>
+              <span class="plan__description">Prepare-se para o trabalho</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Como escolher entre empresas</li>
+                <li class="list__item">Guia de níveis de engenharia</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Ler Agora</button>
             </div>
           </div>
         </div>
@@ -462,7 +486,7 @@
         </section>
         <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
-          <p class="footer__copyright">Copyright 2023 Helena Pedro</p>
+          <p class="footer__copyright">Copyright 2023 Expertise</p>
         </div>
       </div>
     </footer>
