--- a/index.html
+++ b/index.html
@@ -41,50 +41,51 @@
       <div class="container grid grid--1x2">
         <header class="block__header hero__content">
           <h1 data-aos="fade-right" class="block__heading">
-            A roadmap toward expertise.
+            Um roteiro para atingir a proficiência.
           </h1>
           <p class="hero__tagline">
-            Unlock your full potential and excel in your choosen career with our
-            insights into the mindset, skills, and strategies required to reach
-            the highest levels of proficiency.
+            Desbloqueie todo o seu potencial e destaque-se na carreira escolhida
+            com os nossos insights sobre a mentalidade, habilidades e
+            estratégias necessárias para alcançar os mais altos níveis de
+            proficiência.
           </p>
-          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+          <a href="" class="btn btn--accent btn--stretched">Começar</a>
         </header>
         <picture data-aos="zoom-in">
           <source
             type="image/webp"
-            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+            srcset="images/banner.webp 1x, images/logo0.svg 2x"
           />
           <source
             type="image/png"
-            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+            srcset="images/banner.png 1x, images/logo0.svg 2x"
           />
-          <img class="hero__image" src="images/banner.png" alt="" />
+          <img class="hero__image" src="images/logo0.svg" alt="" />
         </picture>
       </div>
     </section>
     <section data-aos="fade-up" class="block container block-domain">
       <header class="block__header">
-        <h2>Starting at $20 per month</h2>
-        <p>Choose the plan that best fits your goals</p>
+        <h2>A partir de 50.000Kzs por mês</h2>
+        <p>Escolha o plano que melhor se adapta aos seus objetivos</p>
       </header>
       <div class="input-group">
         <input
           type="text"
           class="input"
-          placeholder="Enter plan name here..."
+          placeholder="Pesquise pelo plano aqui..."
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
             <use href="images/sprite.svg#search"></use></svg
-          >Search
+          >Pesquisar
         </button>
       </div>
       <ul class="list block-domain__prices">
-        <li><span class="badge badge--secondary">Gold $100</span></li>
-        <li>Basic $20</li>
-        <li>Mid $30</li>
-        <li>Extra $15</li>
+        <li><span class="badge badge--secondary">Gold 150.000 Kzs</span></li>
+        <li>Básico</li>
+        <li>Médio</li>
+        <li>Avançado</li>
       </ul>
     </section>
     <section data-aos="fade-up" class="block container">
@@ -196,23 +197,21 @@
               <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Plans to fulfill your needs</h3>
+          <h3 class="feature__heading">
+            Planos para alcançares os teus objectivos
+          </h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            O Team Expertise vai direto ao ponto e diz o que você precisa saber
+            para se destacar em suas entrevistas técnicas.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a href="#" class="link-arrow">Saiba Mais</a>
         </div>
         <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+            srcset="images/img1.webp 1x, images/img1.webp 2x"
           />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
+          <img class="feature__image" src="images/img1.webp" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -414,10 +413,15 @@
       <div class="callout callout--primary callout-signup">
         <div class="grid grid--1x2">
           <div class="callout__content">
-            <h2 class="callout__heading">Ready to Get Started?</h2>
-            <p>Join us to explore the path to achieving expertise</p>
+            <h2 class="callout__heading">Pronto para começar?</h2>
+            <p>
+              Crie o currículo perfeito com os modelos e amostras de currículo
+              de Engenheiros de Software de alta qualidade da Expertise.
+            </p>
           </div>
-          <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
+          <a href="#" class="btn btn--secondary btn--stretched"
+            >Melhore o seu CV agora</a
+          >
         </div>
       </div>
     </div>
@@ -485,7 +489,7 @@
           </div>
         </section>
         <div class="footer__brand">
-          <img src="images/logo.svg" alt="" />
+          <img src="images/logo0.svg" alt="" />
           <p class="footer__copyright">Copyright 2023 Expertise</p>
         </div>
       </div>
