--- a/index.html
+++ b/index.html
@@ -314,32 +314,14 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprite.svg#snap"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
-                  vel perspiciatis consequuntur ab.
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
                   <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                <h3 class="media__title">💯 Vá do zero ao herói</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
-                  vel perspiciatis consequuntur ab.
+                  Vá do zero ao herói da entrevista técnica com a nossa mentoria. 
+                  Não é necessária experiência prévia em entrevista.
                 </p>
               </div>
             </div>
@@ -348,15 +330,50 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#computer"></use>
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Dynamic Caching & More</h3>
+                <h3 class="media__title">📝 Perguntas práticas selecionadas</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
-                  vel perspiciatis consequuntur ab.
+                  Ninguém tem tempo para praticar algumas centenas de questões. 
+                  Te guiamos através da Lista popular 
+                  <a 
+                    href="https://www.teamblind.com/post/New-Year-Gift---Curated-List-of-Top-75-LeetCode-Questions-to-Save-Your-Time-OaM1orEU" 
+                    target="_blank">Blind 75 
+                  </a>para dizer quais são as melhores perguntas.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="images/sprite.svg#tick"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">📋 Práticas recomendadas para entrevistas</h3>
+                <p>
+                  Direto ao ponto Fazer e não fazer durante uma entrevista. A batalha
+                  já está meio ganha.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="images/sprite.svg#easy"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">💁 ♀️ Dicas práticas de algoritmos</h3>
+                <p>
+                  Dicas práticas para cada tópico de algoritmo - técnicas comuns e 
+                  casos de canto para observar.
                 </p>
               </div>
             </div>
@@ -376,7 +393,7 @@
           <div class="grid grid--1x2">
             <div class="testimonial__image">
               <img
-                src="images/testimonial.jpg"
+                src="images/testimonial1.webp"
                 alt="A happy, smiling customer"
               />
               <span class="icon-container icon-container--accent">
@@ -387,9 +404,14 @@
             </div>
             <blockquote class="quote">
               <p class="quote__text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Incidunt optio officiis dolore earum error eaque perferendis
-                laudantium sed praesentium dolorum.
+                A Expertise desempenhou um papel crucial no
+                sucesso da minha busca de emprego anterior. A mentoria é
+                cuidadosamente personalizada e bem organizada. Serviram como um
+                excelente guia para a minha preparação para a entrevista.</br>
+                Com a ajuda da Expertise, consegui ofertas do BAI,
+                SB, SANLAM e várias outras grandes empresas.</br>Realmente 
+                aprecio os colaboradores por publicarem conteúdo de qualidade para a comunidade.
+                Eu recomendo de todo o coração este website e o seu backup team para qualquer pessoa!"
               </p>
               <footer>
                 <div class="media">
@@ -399,8 +421,10 @@
                     </svg>
                   </div>
                   <div class="media__body">
-                    <h3 class="media__title quote__author">John Smith</h3>
-                    <p class="quote__organization">ABC Company</p>
+                    <h3 class="media__title quote__author">John Doe</h3>
+                    <p class="quote__organization">
+                      Software Engineer, ABC Company
+                    </p>
                   </div>
                 </div>
               </footer>
@@ -489,7 +513,7 @@
           </div>
         </section>
         <div class="footer__brand">
-          <img src="images/logo0.svg" alt="" />
+          <!-- <img src="images/logo0.svg" alt="" /> -->
           <p class="footer__copyright">Copyright 2023 Expertise</p>
         </div>
       </div>
