--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </section>
     <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
+        <h2>Temos tudo o que você precisa - tudo direto ao ponto</h2>
       </header>
       <div class="container grid grid--1x2">
         <picture data-aos="fade-right" class="block-showcase__image">
@@ -374,6 +374,38 @@
                 <p>
                   Dicas práticas para cada tópico de algoritmo - técnicas comuns e 
                   casos de canto para observar.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="images/sprite.svg#clock"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">💬 Questões comportamentais</h3>
+                <p>
+                  Confira quais perguntas comportamentais as empresas costumam fazer 
+                  e você pode preparar suas respostas com antecedência.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="images/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">🧪 Testado e comprovado</h3>
+                <p>
+                  Vários engenheiros conseguiram seus empregos dos sonhos com a 
+                  ajuda da Expertise.
                 </p>
               </div>
             </div>
