--- a/index.html
+++ b/index.html
@@ -221,23 +221,27 @@
               <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <h3 class="feature__heading">Interessado em publicitar na nossa página?</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            Aproveite mais de 200.000 visualizações de página mensais de 40.000 a 50.000
+             engenheiros de software exclusivos.</br>Os patrocinadores podem escolher uma
+              ou todas as seguintes posições para anunciar conosco:
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <ul class="list list--tick">
+            <li class="list__item">Banner superior de cada página</li>
+            <li class="list__item">Página inicial</li>
+            <li class="list__item">Barra lateral de cada página</li>
+            <li class="list__item"> Menu de navegação</li>
+            <li class="list__item">Fundo de cada page</li>
+          </ul>
+          <a href="#" class="link-arrow">Publicite Conosco</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-right">
           <source
             type="image/webp"
-            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
+            srcset="images/ad.webp 1x, images/ad.webp 2x"
           />
-          <source
-            type="image/jpg"
-            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
+          <img class="feature__image" src="images/ad.webp" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -297,8 +301,8 @@
       <header class="block__header">
         <h2>Temos tudo o que você precisa - tudo direto ao ponto</h2>
       </header>
-      <div class="container grid grid--1x2">
-        <picture data-aos="fade-right" class="block-showcase__image">
+      <div class="container">
+        <<!-- picture data-aos="fade-right" class="block-showcase__image">
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
@@ -308,7 +312,7 @@
             srcset="images/ipad.png 1x, images/ipad@2x.png 2x"
           />
           <img src="images/ipad.png" alt="" />
-        </picture>
+        </picture> -->
         <ul class="list" data-aos="fade-up">
           <li>
             <div class="media">
@@ -398,7 +402,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#tick"></use>
                 </svg>
               </div>
               <div class="media__body">
