--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+        <a class="nav__brand" href="/"></a>
         <svg class="icon icon--white nav__toggler">
           <use href="images/sprite.svg#menu"></use>
         </svg>
@@ -53,12 +53,8 @@
         </header>
         <picture data-aos="zoom-in">
           <source
-            type="image/webp"
-            srcset="images/banner.webp 1x, images/logo0.svg 2x"
-          />
-          <source
-            type="image/png"
-            srcset="images/banner.png 1x, images/logo0.svg 2x"
+            type="image/svg"
+            srcset="images/logo0.svg 1x, images/logo0.svg 2x"
           />
           <img class="hero__image" src="images/logo0.svg" alt="" />
         </picture>
@@ -184,10 +180,9 @@
     </section>
     <section class="block container">
       <header class="block__header">
-        <h2>Keep up to Keep Growing</h2>
+        <h2>Mantenha-se atualizado para continuar crescendo</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-          voluptatem.
+          Atualizações exclusivas 
         </p>
       </header>
       <article class="grid grid--1x2 feature">
@@ -248,26 +243,25 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">Wordpress Made Easy</h3>
+          <h3 class="feature__heading">Entrevista com Engenheiros de Software: 
+            Tudo o que você precisa para se preparar
+          </h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            Este guia fornecerá uma visão geral rápida das principais dicas sobre 
+            como se preparar para uma entrevista de engenheiro de software - rodadas 
+            de entrevista técnica e não técnica. 
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a href="#" class="link-arrow">Saiba Mais</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-left">
           <source
             type="image/webp"
-            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+            srcset="images/inter.webp 1x, images/inter.webp 2x"
           />
-          <source
-            type="image/jpg"
-            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/wordpress@2x.jpg" alt="" />
+          <img class="feature__image" src="images/inter.webp" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -277,23 +271,24 @@
               <use href="images/sprite.svg#clock"></use>
             </svg>
           </span>
-          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <h3 class="feature__heading">
+            Entrevista com Engenheiros de Software: 
+            Criando a auto-introdução perfeita
+          </h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
+            "Conte-me sobre você" ou "faça uma introdução rápida do seu perfil" 
+            é quase sempre a primeira pergunta encontrada em suas entrevistas com 
+            engenheiros de software. Este guia ensina como maximizar essa chance de 
+            impressionar o entrevistador, elaborando a auto-introdução perfeita.
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in-right">
           <source
             type="image/webp"
-            srcset="images/support.webp 1x, images/support@2x.webp 2x"
+            srcset="images/interv.webp 1x, images/interv.webp 2x"
           />
-          <source
-            type="image/jpg"
-            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
-          />
-          <img class="feature__image" src="images/support@2x.jpg" alt="" />
+          <img class="feature__image" src="images/interv.webp" alt="" />
         </picture>
       </article>
     </section>
@@ -419,10 +414,7 @@
     </section>
     <section class="block" data-aos="zoom-in">
       <header class="block__header">
-        <h2>What our Customers are Saying</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, ipsam.
-        </p>
+        <h2>O que nossos clientes estão dizendo</h2>
       </header>
       <div class="container">
         <div class="card testimonial">
@@ -480,7 +472,7 @@
             </p>
           </div>
           <a href="#" class="btn btn--secondary btn--stretched"
-            >Melhore o seu CV agora</a
+            >Atualize o seu CV agora</a
           >
         </div>
       </div>
@@ -490,61 +482,61 @@
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
           <div class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Products</h2>
+            <h2 class="collapsible__heading footer__heading">Geral</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Website Hosting</a></li>
-              <li><a href="#">Free Automated Wordpress</a></li>
-              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Comece a ler</a></li>
+              <li><a href="#">Ver um currículo pronto</a></li>
+              <li><a href="#">Teste Psicotécnico</a></li>
             </ul>
           </div>
         </section>
         <section class="collapsible footer__section">
           <div class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Company</h2>
+            <h2 class="collapsible__heading footer__heading">Entrevista</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Affiliates</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="#">Plano de estudo para entrevista</a></li>
+              <li><a href="#">Entrevista Técnica</a></li>
+              <li><a href="#">Entrevista Comportamental</a></li>
             </ul>
           </div>
         </section>
         <section class="collapsible footer__section">
           <div class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Support</h2>
+            <h2 class="collapsible__heading footer__heading">Comunidade</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Knowledge Base</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Github</a></li>
+              <li><a href="#">LeetCode</a></li>
+              <li><a href="#">Linkedin</a></li>
             </ul>
           </div>
         </section>
         <section class="collapsible footer__section">
           <div class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Domains</h2>
+            <h2 class="collapsible__heading footer__heading">Mais</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Domain Checker</a></li>
-              <li><a href="#">Domain Transfer</a></li>
-              <li><a href="#">Free Domain</a></li>
+              <li><a href="#">Manual de Entrevista Front-End</a></li>
+              <li><a href="#">Manual de Entrevista Back-End</a></li>
+              <li><a href="#">Fale Conosco</a></li>
             </ul>
           </div>
         </section>
