--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <h2>Temos tudo o que você precisa - tudo direto ao ponto</h2>
       </header>
       <div class="container">
-        <<!-- picture data-aos="fade-right" class="block-showcase__image">
+        <!--<picture data-aos="fade-right" class="block-showcase__image">
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x"
@@ -477,7 +477,6 @@
         </div>
       </div>
     </div>
-
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
