--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <input
           type="text"
           class="input"
-          placeholder="Pesquise pelo plano aqui..."
+          placeholder="Pesquisar"
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
