--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             </p>
           </div>
           <a href="#" class="btn btn--secondary btn--stretched"
-            >Atualize o seu CV agora</a
+            >Atualizar CV</a
           >
         </div>
       </div>
