--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="container grid grid--1x2">
         <header class="block__header hero__content">
           <h1 data-aos="fade-right" class="block__heading">
-            Um roteiro para atingir a proficiência.
+            Roteiro para atingir a proficiência.
           </h1>
           <p class="hero__tagline">
-            Desbloqueie todo o seu potencial e destaque-se na carreira escolhida
+            Desbloqueie todo o seu potencial e destaque-se carreira escolhida
             com os nossos insights sobre a mentalidade, habilidades e
-            estratégias necessárias para alcançar os mais altos níveis de
+            estratégias para alcançar os mais altos níveis de
             proficiência.
           </p>
           <a href="" class="btn btn--accent btn--stretched">Começar</a>
