--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
       <div class="container grid grid--1x2">
         <header class="block__header hero__content">
           <h1 data-aos="fade-right" class="block__heading">
-            Roteiro para atingir a proficiência.
+            Roteiro para a proficiência.
           </h1>
           <p class="hero__tagline">
-            Desbloqueie todo o seu potencial e destaque-se carreira escolhida
-            com os nossos insights sobre a mentalidade, habilidades e
-            estratégias para alcançar os mais altos níveis de
-            proficiência.
+            Destaque-se na carreira escolhida com a nossa mentoria 
+            sobre a mentalidade, habilidades e estratégias para alcançar 
+            os mais altos níveis de proficiência.
           </p>
           <a href="" class="btn btn--accent btn--stretched">Começar</a>
         </header>
