--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
       <div class="container grid grid--1x2">
         <header class="block__header hero__content">
           <h1 data-aos="fade-right" class="block__heading">
-            Roteiro para a proficiência.
+            EXPERTISE
           </h1>
           <p class="hero__tagline">
-            Destaque-se na carreira escolhida com a nossa mentoria 
-            sobre a mentalidade, habilidades e estratégias para alcançar 
-            os mais altos níveis de proficiência.
+            Um Roteiro para alcançar a proficiência.
           </p>
           <a href="" class="btn btn--accent btn--stretched">Começar</a>
         </header>
