--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </button>
       </div>
       <ul class="list block-domain__prices">
-        <li><span class="badge badge--secondary">Gold 150.000 Kzs</span></li>
+        <li><span class="badge badge--secondary">Gold</span></li>
         <li>Básico</li>
         <li>Médio</li>
         <li>Avançado</li>
